* Better error-checking - eliminating duplicates in several tables
* Complete re-write of the Cabinet Distribution Unit code
-- Now uses templates to define each model of CDU
-- Graphs the last read load value in kW on the Cabinet Navigator
-- Support for various means of calculating kW, including 3-phase
* Support for hyperlinks and images in Notes for devices
* Support for front and back connections on patch panels

Changes in 1.5
--------------
* Database charset changed from latin1 to utf8 to better support localization/internationalization
* Better error-checking
* Ability to disable users (don't delete them since they are foreign keys for auditing)
* Chassis/Blade tracking for front and rear slots
* Ability to enter SNMP temperature sensor information with each cabinet
* Barcode scanning for Serial # and Asset Tag in devices
-- Requires the ZXing app on mobile device
-- Does not work correctly with Chrome Browser on Android
-- Works perfectly with Dolphin Browser on Android
-- Need testers for other platforms

Changes in 1.4
--------------
* Style sheet colors are now configuration items
* Added a visual placement picker for devices when putting into a cabinet.  Displays available spaces rather than simply allowing an arbitrary number to be entered.
* Added database structure for a very rudimentary spare stock inventory
* Added in support for chassis devices in a parent/child relationship.  Renamed the the device type of 'Routing Chassis' to simply 'Chassis' in support of this.
* Additional bug fixes and security auditing of the code

Changes in 1.3
--------------
* Added an optional reservation color for the cabinet view to the configuration options
* Added the ability to color code the cabinet view by department (default is no colorization)
* Changed out button interface for a more tab friendly click interface
* Added Warranty Company and Warranty Expiration to devices
* Added Key/Lock Information field to Cabinets